--- a/templates/train.html
+++ b/templates/train.html
@@ -1,11 +1,6 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-    <!-- <div class="container mx-2 mb-2 d-flex justify-content-center">
-        <form action="/train" method="POST">
-            <button type="submit" class="btn btn-primary">Train Model</button>
-        </form>
-    </div> -->
     <div class="container">
         <div class="row">
           <div class="col text-center">
@@ -15,7 +10,11 @@
           </div>
         </div>
     </div>
-    <div>
-        {{message}}    
+    <div class="container"></div>
+        <div class="row">
+          <div class="col text-center">
+            {{message}}    
+          </div>
+        </div>
     </div>
 {% endblock %}
